--- a/10j.html
+++ b/10j.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MD Shazzadul Islam</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <h1>Summer 2019</h1>
@@ -13,25 +14,12 @@
 
    <br>
 
-   <input type="radio" value="male"> Male </input><br>
-   <input type="radio" value="female">Female </input> <br>
+   <div>
+    <input type="radio" value="male"> Male </input><br>
+    <input type="radio" value="female">Female </input>
+   </div> <br>
 
-   <form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+
 
    <img src="rosa-roja-ofrenda.jpg" alt="" height="20%" width="20%">
 
